<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView2"
    android:layout_marginTop="3000dp"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/instrumentImage"
            android:layout_width="110dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/instrument_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backgroundsanfona" />

        <TextView
            android:id="@+id/instrumentNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/instrumento"
            android:textColor="#4b4646"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/instrumentImage"
            app:layout_constraintTop_toTopOf="@+id/instrumentImage" />

        <TextView
            android:id="@+id/instrumentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/violao"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/instrumentNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/instrumentNameLabel" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/imei"
            android:textColor="#4b4646"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/instrumentName"
            app:layout_constraintTop_toBottomOf="@+id/instrumentName" />

        <TextView
            android:id="@+id/instrumentIMEI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/numero_de_serie"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <Button
            android:id="@+id/btnCloseCardView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/background_close_button"
            android:src="@drawable/ic_close_white_24dp"
            android:text="X"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/instrumentName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_image_instrument"
            style="?android:attr/progressBarStyle"
            android:layout_width="33dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/instrumentImage"
            app:layout_constraintStart_toStartOf="@+id/instrumentImage"
            app:layout_constraintTop_toTopOf="@+id/instrumentImage" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>


